Make SVG docs consistently use properties tables

--- a/files/en-us/web/svg/attribute/class/index.html
+++ b/files/en-us/web/svg/attribute/class/index.html
@@ -22,7 +22,7 @@ browser-compat: svg.attributes.style.class
 
 <h2 id="Usage_context">Usage context</h2>
 
-<table class="standard-table">
+<table class="properties">
 	<tbody>
 		<tr>
 			<th scope="row">Categories</th>
