--- a/files/en-us/web/svg/attribute/cursor/index.html
+++ b/files/en-us/web/svg/attribute/cursor/index.html
@@ -16,7 +16,7 @@ browser-compat: svg.attributes.presentation.cursor
 
 <h2 id="Usage_context">Usage context</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
