--- a/files/en-us/web/svg/attribute/cy/index.html
+++ b/files/en-us/web/svg/attribute/cy/index.html
@@ -38,7 +38,7 @@ tags:
 
 <p>For {{SVGElement('circle')}}, <code>cy</code> defines the y-axis coordinate of the center of the shape.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -61,7 +61,7 @@ tags:
 
 <p>For {{SVGElement('ellipse')}}, <code>cy</code> defines the y-axis coordinate of the center of the shape.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -84,7 +84,7 @@ tags:
 
 <p>For {{SVGElement('radialGradient')}}, <code>cy</code> defines the y-axis coordinate of the end circle for the radial gradient.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
