--- a/files/en-us/web/svg/attribute/dy/index.html
+++ b/files/en-us/web/svg/attribute/dy/index.html
@@ -54,7 +54,7 @@ tags:
 
 <p>If there are multiple values, <code>dy</code> defines a shift along the y-axis for each individual glyph relative to the preceding glyph. If there are less values than glyphs, the remaining glyphs use a value of <code>0</code>. If there are more values than glyphs, extra values are ignored.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -75,7 +75,7 @@ tags:
 
 <p>For {{SVGElement('feDropShadow')}}, <code>dy</code> defines the y offset of the dropped shadow. The unit used to resolve the value of the attribute is set by the {{SVGAttr('primitiveUnits')}} attribute of the {{SVGElement('filter')}} element.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -96,7 +96,7 @@ tags:
 
 <p>For {{SVGElement('feOffset')}}, <code>dy</code> defines the y offset of the filter input graphic. The unit used to resolve the value of the attribute is set by the {{SVGAttr('primitiveUnits')}} attribute of the {{SVGElement('filter')}} element.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -119,7 +119,7 @@ tags:
 
 <p>For {{SVGElement('glyphRef')}}, <code>dy</code> defines the y offset of the glyph, in the font metric system.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -142,7 +142,7 @@ tags:
 
 <p>If there are multiple values, <code>dy</code> defines a shift along the y-axis for each individual glyph relative to the preceding glyph. If there are less values than glyphs, the remaining glyphs use a value of <code>0</code>. If there are more values than glyphs, extra values are ignored.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -197,7 +197,7 @@ tags:
 
 <p>If there are multiple values, <code>dy</code> defines a shift along the y-axis for each individual glyph relative to the preceding glyph. If there are less values than glyphs, the remaining glyphs use a value of <code>0</code>. If there are more values than glyphs, extra values are ignored.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -220,7 +220,7 @@ tags:
 
 <p>If there are multiple values, <code>dy</code> defines a shift along the y-axis for each individual glyph relative to the preceding glyph. If there are less values than glyphs, the remaining glyphs use a value of <code>0</code>. If there are more values than glyphs, extra values are ignored.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
