--- a/files/en-us/web/svg/attribute/fill/index.html
+++ b/files/en-us/web/svg/attribute/fill/index.html
@@ -67,7 +67,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('altGlyph')}}, <code>fill</code> is a presentation attribute that defines the color of the glyph.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -90,7 +90,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('animate')}}, <code>fill</code> defines the final state of the animation.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -113,7 +113,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('animateColor')}}, <code>fill</code> defines the final state of the animation.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -134,7 +134,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('animateMotion')}}, <code>fill</code> defines the final state of the animation.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -155,7 +155,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('animateTransform')}}, <code>fill</code> defines the final state of the animation.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -176,7 +176,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('circle')}}, <code>fill</code> is a presentation attribute that defines the color of the circle.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -199,7 +199,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('ellipse')}}, <code>fill</code> is a presentation attribute that defines the color of the ellipse.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -222,7 +222,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('path')}}, <code>fill</code> is a presentation attribute that defines the color of the interior of the shape. (<em>Interior is define by the {{SVGAttr('fill-rule')}} attribute</em>)</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -245,7 +245,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('polygon')}}, <code>fill</code> is a presentation attribute that defines the color of the interior of the shape. (<em>Interior is define by the {{SVGAttr('fill-rule')}} attribute</em>)</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -268,7 +268,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('polyline')}}, <code>fill</code> is a presentation attribute that defines the color of the interior of the shape. (<em>Interior is define by the {{SVGAttr('fill-rule')}} attribute</em>)</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -291,7 +291,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('rect')}}, <code>fill</code> is a presentation attribute that defines the color of the rectangle.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -314,7 +314,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('set')}}, <code>fill</code> defines the final state of the animation.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -335,7 +335,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('text')}}, <code>fill</code> is a presentation attribute that defines what the color of the text.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -358,7 +358,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('textPath')}}, <code>fill</code> is a presentation attribute that defines the color of the text.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -383,7 +383,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('tref')}}, <code>fill</code> is a presentation attribute that defines the color of the text.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -406,7 +406,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>For {{SVGElement('tspan')}}, <code>fill</code> is a presentation attribute that defines the color of the text.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
