--- a/files/en-us/web/svg/attribute/order/index.html
+++ b/files/en-us/web/svg/attribute/order/index.html
@@ -41,7 +41,7 @@ browser-compat: svg.elements.feConvolveMatrix.order
 
 <h2 id="Usage_notes">Usage notes</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
