--- a/files/en-us/web/svg/attribute/r/index.html
+++ b/files/en-us/web/svg/attribute/r/index.html
@@ -49,7 +49,7 @@ tags:
 
 <p>For {{SVGElement('circle')}}, <code>r</code> defines the radius of the circle and therefor its size. With a value lower or equal to zero the circle won't be drawn at all.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -74,7 +74,7 @@ tags:
 
 <p>The gradient will be drawn such that the <strong>100%</strong> gradient stop is mapped to the perimeter of this end circle. A value of lower or equal to zero will cause the area to be painted as a single color using the color and opacity of the last gradient {{ SVGElement("stop") }}.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
