--- a/files/en-us/web/svg/attribute/rx/index.html
+++ b/files/en-us/web/svg/attribute/rx/index.html
@@ -36,7 +36,7 @@ tags:
 
 <p>For {{SVGElement('ellipse')}}, <code>rx</code> defines the x-radius of the shape. With a value lower or equal to zero the ellipse won't be drawn at all.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -67,7 +67,7 @@ tags:
  <li>If <code>rx</code> is greater than half of the width of the rectangle, then the browser will consider the value for <code>rx</code> as half of the width of the rectangle.</li>
 </ul>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
