--- a/files/en-us/web/svg/attribute/stroke-dasharray/index.html
+++ b/files/en-us/web/svg/attribute/stroke-dasharray/index.html
@@ -59,7 +59,7 @@ browser-compat: svg.attributes.presentation.stroke-dasharray
 
 <h2 id="Usage_notes">Usage notes</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
