--- a/files/en-us/web/svg/attribute/transform/index.html
+++ b/files/en-us/web/svg/attribute/transform/index.html
@@ -36,7 +36,7 @@ tags:
 
 <p>Also, as a legacy from SVG 1.1, {{SVGElement('linearGradient')}} and {{SVGElement('radialGradient')}} support the <code>gradientTransform</code> attribute, and {{SVGElement('pattern')}} supports the <code>patternTransform</code> attribute, both of which act exactly like the <code>transform</code> attribute.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
