--- a/files/en-us/web/svg/attribute/type/index.html
+++ b/files/en-us/web/svg/attribute/type/index.html
@@ -38,7 +38,7 @@ tags:
 
 <h3 id="For_the_SVGElement(animateTransform)_elements">For the {{SVGElement("animateTransform")}} elements</h3>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
@@ -61,7 +61,7 @@ tags:
 
 <h3 id="For_the_SVGElement(feColorMatrix)_element">For the {{ SVGElement("feColorMatrix") }} element</h3>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
@@ -84,7 +84,7 @@ tags:
 
 <h3 id="For_the_SVGElement(feFuncR)_SVGElement(feFuncG)_SVGElement(feFuncB)_and_SVGElement(feFuncA)_elements">For the {{ SVGElement("feFuncR") }}, {{ SVGElement("feFuncG") }}, {{ SVGElement("feFuncB") }}, and {{ SVGElement("feFuncA") }} elements</h3>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
@@ -107,7 +107,7 @@ tags:
 
 <h3 id="For_the_SVGElement(feTurbulence)_element">For the {{ SVGElement("feTurbulence") }} element</h3>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
@@ -130,7 +130,7 @@ tags:
 
 <h3 id="For_the_SVGElement(style)_and_SVGElement(script)_elements">For the {{ SVGElement("style") }} and {{SVGElement("script")}} elements</h3>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
