--- a/files/en-us/web/svg/attribute/x1/index.html
+++ b/files/en-us/web/svg/attribute/x1/index.html
@@ -37,7 +37,7 @@ tags:
 
 <p>For {{SVGElement('line')}}, <code>x1</code> defines the x coordinate of the starting point of the line.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -68,7 +68,7 @@ tags:
 
 <p>For {{SVGElement('linearGradient')}}, <code>x1</code> defines the  x coordinate of the starting point of the <em>gradient vector</em> used to map the gradient stop values. The exact behavior of this attribute is influenced by the {{SVGAttr('gradientUnits')}} attributes</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
