--- a/files/en-us/web/svg/attribute/x2/index.html
+++ b/files/en-us/web/svg/attribute/x2/index.html
@@ -32,7 +32,7 @@ tags:
 
 <p>For {{SVGElement('line')}}, <code>x2</code> defines the x coordinate of the ending point of the line.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -63,7 +63,7 @@ tags:
 
 <p>For {{SVGElement('linearGradient')}}, <code>x2</code> defines the  x coordinate of the ending point of the <em>gradient vector</em> used to map the gradient stop values. The exact behavior of this attribute is influenced by the {{SVGAttr('gradientUnits')}} attributes</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
