--- a/files/en-us/web/svg/attribute/font-size-adjust/index.html
+++ b/files/en-us/web/svg/attribute/font-size-adjust/index.html
@@ -43,7 +43,7 @@ browser-compat: svg.attributes.presentation.font-size-adjust
 
 <h2 id="Usage_notes">Usage notes</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Default value</th>
