--- a/files/en-us/web/svg/attribute/overline-thickness/index.html
+++ b/files/en-us/web/svg/attribute/overline-thickness/index.html
@@ -17,7 +17,7 @@ tags:
 
 <h2 id="Usage_context">Usage context</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
