--- a/files/en-us/web/svg/attribute/stroke-miterlimit/index.html
+++ b/files/en-us/web/svg/attribute/stroke-miterlimit/index.html
@@ -76,7 +76,7 @@ browser-compat: svg.attributes.presentation.stroke-miterlimit
 
 <h2 id="Usage_context">Usage context</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
