--- a/files/en-us/web/svg/attribute/underline-position/index.html
+++ b/files/en-us/web/svg/attribute/underline-position/index.html
@@ -19,7 +19,7 @@ tags:
 
 <h2 id="Usage_context">Usage context</h2>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Categories</th>
