--- a/files/en-us/web/svg/attribute/width/index.html
+++ b/files/en-us/web/svg/attribute/width/index.html
@@ -56,7 +56,7 @@ tags:
 
 <p>For {{SVGElement('feBlend')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -77,7 +77,7 @@ tags:
 
 <p>For {{SVGElement('feColorMatrix')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -98,7 +98,7 @@ tags:
 
 <p>For {{SVGElement('feComponentTransfer')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -119,7 +119,7 @@ tags:
 
 <p>For {{SVGElement('feComposite')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -140,7 +140,7 @@ tags:
 
 <p>For {{SVGElement('feConvolveMatrix')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -161,7 +161,7 @@ tags:
 
 <p>For {{SVGElement('feDiffuseLighting')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -182,7 +182,7 @@ tags:
 
 <p>For {{SVGElement('feDisplacementMap')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -203,7 +203,7 @@ tags:
 
 <p>For {{SVGElement('feDropShadow')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -224,7 +224,7 @@ tags:
 
 <p>For {{SVGElement('feFlood')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -245,7 +245,7 @@ tags:
 
 <p>For {{SVGElement('feGaussianBlur')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -266,7 +266,7 @@ tags:
 
 <p>For {{SVGElement('feImage')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -287,7 +287,7 @@ tags:
 
 <p>For {{SVGElement('feMerge')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -308,7 +308,7 @@ tags:
 
 <p>For {{SVGElement('feMorphology')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -329,7 +329,7 @@ tags:
 
 <p>For {{SVGElement('feOffset')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -350,7 +350,7 @@ tags:
 
 <p>For {{SVGElement('feSpecularLighting')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -371,7 +371,7 @@ tags:
 
 <p>For {{SVGElement('feTile')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -392,7 +392,7 @@ tags:
 
 <p>For {{SVGElement('feTurbulence')}}, <code>width</code> defines the horizontal length for the rendering area of the primitive.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -413,7 +413,7 @@ tags:
 
 <p>For {{SVGElement('filter')}}, <code>width</code> defines the horizontal length for the rendering area of the filter.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -434,7 +434,7 @@ tags:
 
 <p>For {{SVGElement('foreignObject')}}, <code>width</code> defines the horizontal length for the rendering area for the referenced document.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -457,7 +457,7 @@ tags:
 
 <p>For {{SVGElement('image')}}, <code>width</code> defines the horizontal length for the image.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -480,7 +480,7 @@ tags:
 
 <p>For {{SVGElement('mask')}}, <code>width</code> defines the horizontal length of its area of effect. The exact effect of this attribute is influenced by the {{SVGAttr('maskUnits')}} attribute.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -501,7 +501,7 @@ tags:
 
 <p>For {{SVGElement('pattern')}}, <code>width</code> defines the horizontal length of the tile pattern. The exact effect of this attribute is influenced by the {{SVGAttr('patternUnits')}} and {{SVGAttr('patternTransform')}} attributes.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -522,7 +522,7 @@ tags:
 
 <p>For {{SVGElement('rect')}}, <code>width</code> defines the horizontal length for the rectangle.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -547,7 +547,7 @@ tags:
 
 <div class="note"><p><strong>Note:</strong> In an HTML document if both the {{SVGAttr('viewBox')}} and <code>width</code> attributes are omitted, <a href="https://svgwg.org/specs/integration/#svg-css-sizing">the svg element will be rendered with a width of <code>300px</code></a></p></div>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
@@ -570,7 +570,7 @@ tags:
 
 <p>For {{SVGElement('use')}}, <code>width</code> defines the horizontal length for the referenced element.</p>
 
-<table class="standard-table">
+<table class="properties">
  <tbody>
   <tr>
    <th scope="row">Value</th>
